Removed clean_depMap notebook and updated model_building notebook

--- a/Code/model_building.ipynb
+++ b/Code/model_building.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": null,
    "id": "ed3b4845",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,6 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from tqdm import tqdm\n",
-    "# === Define your annotate_and_regress function (if not already defined)\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import numpy as np\n",
@@ -346,9 +345,9 @@
     "# === 3. Set Parameters for the Specific Run ===\n",
     "latent_dim = 40  # r = 40\n",
     "bootstrap_iter = 0 # b = 0\n",
-    "seed = 42 + bootstrap_iter\n",
+    "seed = 198716\n",
     "\n",
-    "save_dir = \"Erlotinib_Latent_model_40_b0\"\n",
+    "save_dir = \"Erlotinib_Latent_model_40_b0_new\"\n",
     "os.makedirs(save_dir, exist_ok=True)\n",
     "\n",
     "\n",
